<resources>
    <string name="app_name">Trello Clone</string>
    <string name="trello_clone">Trello Clone</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="collaborate_in_the_project_with_multiple_devices">collaborate in the project with multiple devices
        \nand plane for the project around the task</string>
    <string name="string_introduce">collaborate in the project with multiple device \n and plane for the project around the task</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="you_need_to_enter_your_details">New\nAccount</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="please_wait">Please wait…</string>
    <string name="double_click_to_exit">double click to exit</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="phone_number">Phone number</string>

    <string name="registering_user">Registering user…</string>
    <string name="signing_in">Signing in…</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_board">CREATE BOARD</string>
    <string name="board_name">Board name</string>
    <string name="create">Create</string>
    <string name="creates_by">Creates by</string>
    <string name="created_in">10/11</string>
    <string name="no_boards">No boards!</string>
    <string name="image_contentDescription">Image</string>
    <string name="list_name">List name</string>
    <string name="title">Title</string>
    <string name="card_name">Card name</string>
    <string name="add_card">Add Card</string>
    <string name="deleting_item">Deleting item</string>
    <string name="are_you_sure_to_delete">Are you sure to delete</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="members">Members</string>
    <string name="member_name">Member name</string>
    <string name="email">Email</string>
    <string name="add_member">Add member</string>
    <string name="add">ADD</string>

    <string name="no_user_found">No such user found</string>
    <string name="label_color">Label color</string>
    <string name="select_color">Select color</string>
    <string name="select_member">Select member</string>
    <string name="due_date">Due date</string>
    <string name="select_date">Select date</string>
    <string name="delete_card">Delete card</string>
    <string name="are_sure_you_want_to_delete_this_item">Are sure you want to delete this item</string>
    <string name="checked">Checked</string>

    <string name="notification_channel_id">project_Channel_id</string>
    <string name="your_phone_number">Your phone number</string>
</resources>