<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleting_item"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:text="@string/are_you_sure_to_delete"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"
            android:focusable="true"
            />
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:text="@string/delete"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:focusable="true" />


    </LinearLayout>


</LinearLayout>