<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CardDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_card_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_card_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:autofillHints="name"
                android:defaultFocusHighlightEnabled="false"
                android:ems="10"
                android:focusedByDefault="false"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textCursorDrawable="@color/colorPrimary"
                android:theme="@style/EditTextTheme" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/label_color"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/btn_select_color"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/select_color"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/members"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/btn_select_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/select_member"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/due_date"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/btn_select_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/select_date"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btn_update"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/my_profile_btn_height"
                    android:layout_marginStart="@dimen/my_profile_btn_update_marginStartEnd"
                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                    android:layout_marginEnd="@dimen/my_profile_btn_update_marginStartEnd"
                    android:layout_marginBottom="@dimen/my_profile_btn_update_marginBottom"
                    android:background="@drawable/button_background"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/my_profile_btn_update_text_size" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>