<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_dialog_background"
    android:theme="@style/Theme.Dialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_dialog_background"
        app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
        app:cardElevation="@dimen/dialog_member_cv_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_member_content_padding">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_member_title_padding"
                android:text="@string/add_member"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/dialog_member_title_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_divider_height"
                android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:background="@color/divider_color" />

           <EditText
               android:id="@+id/et_email"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginTop="15dp"
               android:background="@drawable/edit_text_background"
               android:hint="@string/email"
               android:padding="10dp"
               android:autofillHints="emailAddress"
               android:inputType="textEmailAddress" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_action_layout_height"
                android:layout_marginTop="@dimen/member_dialog_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/member_dialog_action_button_text_size" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>